[gd_scene load_steps=27 format=3 uid="uid://cvm32qrncwvj3"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_qvaeg"]
[ext_resource type="Resource" uid="uid://ivgfdch4tfr3" path="res://resources/StatsPlayer.tres" id="2_vaqgg"]
[ext_resource type="Texture2D" uid="uid://ch10vs6w845cc" path="res://Aseprite/Output/player.png" id="3_rappf"]
[ext_resource type="Texture2D" uid="uid://6c23rpm3ahn0" path="res://aseprite/Output/tools.png" id="4_huo07"]
[ext_resource type="Script" path="res://scenes/ToolAnchor.gd" id="4_wx4u1"]
[ext_resource type="Script" path="res://scripts/MovementComponent.gd" id="4_yprdr"]
[ext_resource type="Script" path="res://scripts/states/StateMachine.gd" id="5_5o65l"]
[ext_resource type="Script" path="res://scripts/states/player/StatePlayerGrounded.gd" id="6_obda2"]
[ext_resource type="Script" path="res://scripts/states/player/StatePlayerMidair.gd" id="7_j8m7d"]
[ext_resource type="Script" path="res://scripts/states/player/StatePlayerAction.gd" id="8_yuyv2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dat33"]
size = Vector2(13, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_uftom"]
atlas = ExtResource("3_rappf")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxha7"]
atlas = ExtResource("3_rappf")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_argmy"]
atlas = ExtResource("3_rappf")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ssgi"]
atlas = ExtResource("3_rappf")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kcwc"]
atlas = ExtResource("3_rappf")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k7ny"]
atlas = ExtResource("3_rappf")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gxps"]
atlas = ExtResource("3_rappf")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc4o0"]
atlas = ExtResource("3_rappf")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy7kn"]
atlas = ExtResource("3_rappf")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3an55"]
atlas = ExtResource("3_rappf")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc7fy"]
atlas = ExtResource("3_rappf")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn0mg"]
atlas = ExtResource("3_rappf")
region = Rect2(48, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_dxvh4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uftom")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxha7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_argmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ssgi")
}],
"loop": false,
"name": &"jump",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kcwc")
}],
"loop": false,
"name": &"jump_land",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k7ny")
}],
"loop": false,
"name": &"jump_start",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gxps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc4o0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy7kn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uftom")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3an55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc7fy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn0mg")
}],
"loop": true,
"name": &"use",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_2ka05"]
atlas = ExtResource("4_huo07")
region = Rect2(0, 0, 20, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_cg76a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ka05")
}],
"loop": true,
"name": &"watering can",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("movement_component", "tool_anchor", "state_machine", "sprite")]
safe_margin = 0.16
script = ExtResource("1_qvaeg")
movement_component = NodePath("MovementComponent")
tool_anchor = NodePath("ToolAnchor")
state_machine = NodePath("StateMachine")
sprite = NodePath("AnimatedSprite2D")
stats = ExtResource("2_vaqgg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_dat33")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_dxvh4")
animation = &"use"
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "res://Aseprite/Output",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://Aseprite/player.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": false,
"output_section": true,
"slice_section": false
}

[node name="ToolAnchor" type="Node2D" parent="." node_paths=PackedStringArray("sprite")]
visible = false
position = Vector2(0, -8)
script = ExtResource("4_wx4u1")
sprite = NodePath("AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ToolAnchor"]
texture_filter = 1
position = Vector2(18, 0)
sprite_frames = SubResource("SpriteFrames_cg76a")
animation = &"watering can"
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "res://aseprite/Output",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://aseprite/tools.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true
}

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("4_yprdr")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("state_owner", "initial_state")]
script = ExtResource("5_5o65l")
state_owner = NodePath("..")
initial_state = NodePath("Grounded")

[node name="Grounded" type="Node" parent="StateMachine"]
script = ExtResource("6_obda2")

[node name="Midair" type="Node" parent="StateMachine"]
script = ExtResource("7_j8m7d")

[node name="Action" type="Node" parent="StateMachine"]
script = ExtResource("8_yuyv2")
